# geotherm

./: Cargo.toml  License  README.md  katex-header.html
src/: erf.rs  fad.rs  lib.rs  main.rs
test/: Adiabat.csv  Cargo.toml  Garber2018.ipynb  NAus.csv  Ocean.csv  Q37.csv  Q45.csv  SEAus.csv  Yilgarn.csv  dalton_q37.toml  dalton_q37.txt  dalton_q45.toml  dalton_q45.txt  garber2018Q35.csv  garber2018Q40.csv  garber2018Q45.csv  geotherm.html  oceanic_100Ma.toml
