[package]
name = "geotherm"
version = "0.1.0"
authors = ["Brian Savage <savage13@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Geotherm Calculator"
repository = "https://github.com/savge13/geotherm"
homepage = "https://github.com/savge13/geotherm"
documentation = "https://github.com/savge13/geotherm"


[dependencies]
dimensioned = "0.7.0"
special-fun = "0.1.6"
toml = "0.4"
serde = {version = "1.0.60", features = ["derive"]}
