[package]
name = "geotherm"
version = "0.1.0"
authors = ["Brian Savage <savage13@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Geotherm Calculator"
repository = "https://github.com/savge13/geotherm"
homepage = "https://github.com/savge13/geotherm"
documentation = "https://github.com/savge13/geotherm"
# rustdocflags = ["--html-in-header", "katex-header.html"]

[dependencies]
dimensioned = "0.7.0"
toml = "0.4"
serde = {version = "1.0.60", features = ["derive"]}

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "katex-header.html" ]

